[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exonline-api"
version = "0.1.0"
description = "Python client for the Ex-Online API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0"
]

[project.urls]
"Homepage" = "https://github.com/QGENathan/exonline-api"